# Eso-system

./: .gitignore  FMS.md  README.md  Ryan_Life_OS_Checklist.docx  chat.js  offline.js  sw.js
Data systems/Eso Brain/Life_Domains/FINANCE/SPENDING/blockchain/programs/ecs_vault/: Cargo.toml
Data systems/Eso Brain/Life_Domains/FINANCE/SPENDING/blockchain/programs/ecs_vault/src/: lib.rs
Data systems/Ryan. readme/: My tools & AI.md
Eso Body/Agents (worker)/: eso_bridge.js
Eso Body/ESO_CORE/: WHO.md  file-paths.md
Eso Body/UI/: eso_dashboard_v7.html  eso_v3_futuristic.html
Eso Body/eso/: Modelfile  (+7 more)
Eso-Backup/: .gitignore  Alarm.ps1  SOUL.md  TOOLS.md  basic-search.ps1  check-all.ps1  check-db.ps1  check-food.ps1  debug-table.ps1  eso-daily-backup.ps1  fetch-supper.ps1  find-pages.ps1  get-body.ps1  get-food-children.ps1  get-food.ps1  get-goals.ps1  get-headings.ps1  get-meal-table.ps1  get-timetable-full.ps1  get-timetable.ps1  list-dbs.ps1  list-pages.ps1  plan-food.json  query-meals.ps1  raw-table.ps1  search-notion.ps1  search-timetable.ps1  show-blocks.ps1  table-output.txt  timetable.json
Finance manager/: FINANCE (AI manager prompt).md  FINANCE (Daily log).md
H2UMD manager/: H2UMD_AI_Manager_Prompt.md  H2UMD_Daily_Log.md
PROTOCOLS/: Building protocol.md
eso-hub/: config.js  index.html  manifest.json  pb.js  sw.js
pb_data/: data.db  logs.db
pb_migrations/: 1782463234_created_Inbox.js  1782464594_created_log.js  1782464736_created_reminders.js  1782465393_created_build_tracker.js  1782465668_created_chat_log.js  1782465762_created_finance.js
(+208 files in other folders)
